@@ -178,6 +178,26 @@ DLLFUNC int m_chghost(aClient *cptr, aClient *sptr, int parc, char *parv[])
 
 	if ((acptr = find_person(parv[1], NULL)))
 	{
+		switch (UHOST_ALLOWED)
+		{
+			case UHALLOW_NEVER:
+				if (MyClient(sptr))
+				{
+					sendto_one(sptr, ":%s NOTICE %s :*** /ChgHost is disabled", me.name, sptr->name);
+					return 0;
+				}
+				break;
+			case UHALLOW_ALWAYS:
+				break;
+			case UHALLOW_NOCHANS:
+				if (IsPerson(acptr) && MyClient(sptr) && acptr->user->joined)
+				{
+					sendto_one(sptr, ":%s NOTICE %s :*** /ChgHost can not be used while %s is on a channel", me.name, sptr->name, acptr->name);
+					return 0;
+				}
+				break;
+		}
+				
 		if (!IsULine(sptr))
 		{
 			sendto_snomask(SNO_EYES,
