@@ -176,6 +176,25 @@ DLLFUNC int m_setident(aClient *cptr, aClient *sptr, int parc, char *parv[])
 		}
 		return 1;
 	}
+	switch (UHOST_ALLOWED)
+	{
+		case UHALLOW_ALWAYS:
+			break;
+		case UHALLOW_NEVER:
+			if (MyClient(sptr))
+			{
+				sendto_one(sptr, ":%s NOTICE %s :*** /SetIdent is disabled", me.name, sptr->name);
+				return 0;
+			}
+			break;
+		case UHALLOW_NOCHANS:
+			if (MyClient(sptr) && sptr->user->joined)
+			{
+				sendto_one(sptr, ":%s NOTICE %s :*** /SetIdent can not be used while you are on a channel", me.name, sptr->name);
+				return 0;
+			}
+			break;
+	}
 	if (strlen(parv[1]) < 1)
 	{
 		if (MyConnect(sptr))
